test/ui/tests/packages/type-errors-in-manifest/package.metadata
# TEST fail check

name: 0, version: [ 2, "0", "0" ],

components: [ "core", {}, { type: false, } ],
